welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:19: error: reassignment to val
      gauche();avance();gauche();setCouleurBrosse=(color.BLUE)}
                                                 ^